# clansofmesa

./: Cargo.toml  README.md
assets/map/: plains.ldtk
assets/prefabs/: enemy.ron
crates/bevy_bobs/: Cargo.toml  README.md
crates/bevy_bobs/src/: attack_pattern.rs  health_bar.rs  lib.rs
crates/bevy_bobs/src/component/: health.rs  lifetime.rs
crates/bevy_bobs/src/misc/: displacement.rs
crates/bevy_bobs/src/physics_2d/: mod.rs
crates/bevy_bobs/src/prefab/: mod.rs
crates/bevy_bobs/src/system/: mod.rs
src/: app_state.rs  assetloader.rs  camera.rs  game.rs  input.rs  layers.rs  lib.rs  main.rs  map.rs  networking.rs  player.rs  structure.rs  tower.rs
src/bullet/: mod.rs  prefab.rs
src/enemy/: ai.rs  mod.rs  prefab.rs
src/player/: mod.rs  place.rs  place_structure.rs
src/structure/: ai.rs  mod.rs  prefab.rs
src/ui/: ingame.rs  mod.rs  place_ui.rs
