[package]
name = "clansofmesa"
version = "0.1.0"
edition = "2021"
authors = ["nithinmuthukumar", "MrPicklePinosaur"]
description = ""
repository = "https://github.com/HalfPixelStudios/clansofmesa"

[features]
default = ["bevy_sprite", "bevy_ui"]
bevy_sprite = ["bevy/bevy_sprite", "bevy/bevy_render"]
bevy_ui = ["bevy/bevy_ui", "bevy/bevy_text", "bevy/bevy_render"]

[dependencies]
bevy = { version = "0.7.0", default-features = false, features = [ "render", "animation", "bevy_winit", "bevy_gilrs", "png", "hdr", "filesystem_watcher", "x11", "trace" ] }
bevy_kira_audio = { version = "0.10.0", default-features = false, features = [ "wav" ] }
bevy_rapier2d = { version = "0.14.1", features = ["debug-render"] }
bevy-inspector-egui = { version = "0.11" }
bevy_hanabi = { version = "0.2.0" }
bevy_ggrs = {git="https://github.com/gschup/bevy_ggrs"}
# kayak_ui = { git="https://github.com/StarArawn/kayak_ui", features = ["bevy_renderer"] }

rand = "0.8.5"
argparse = { git = "https://github.com/MrPicklePinosaur/pino.rs" }

ron = "0.7.1"
serde = { version = "1", features = ["derive"] }

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
